--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <title>Radical Quotes</title>
   
   <body>
+    <img src="bodacious.png">
     <h1>Radical Quotes For Radical Dudes</h1>
   </body>
   
