--- a/index.html
+++ b/index.html
@@ -6,4 +6,9 @@
     <h1>Radical Quotes For Radical Dudes</h1>
   </body>
   
+  <style>
+    body {
+     background-color:black; 
+    }
+  </style>
 </html>
