--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <title>Radical Quotes</title>
   
   <body>
+    <div style="width:500px;height:100px;border:0px solid #000000;"></div>
     <img src="Bodacious.png">
     <h1>Radical Quotes For Radical Dudes</h1>
   </body>
