--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <body>
     <img src="Bodacious.png">
     <h1>Radical Quotes For Radical Dudes</h1>
-    <div style="width:500px;height:100px;border:0px solid #FFDD8F;"></div>
+    <div class="Box"></div>
   </body>
   
   <style>
@@ -12,6 +12,12 @@
      background-color:black; 
      color:#fff;
      text-align:center;
+    }
+    
+    .Box {
+      width:500px;
+      height:100px;
+      border:0px solid #FFDD8F;
     }
   </style>
 </html>
