--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <body>
     <img src="Bodacious.png">
     <h1>Radical Quotes For Radical Dudes</h1>
-    <div class="Box"></div>
+    <svg width="400" height="110">
+      <rect width="300" height="100" style="fill:rgb(255,221,143)" />
+    </svg>
   </body>
   
   <style>
@@ -12,12 +14,6 @@
      background-color:black; 
      color:#fff;
      text-align:center;
-    }
-    
-    .Box {
-      width:500px;
-      height:100px;
-      border:0px solid #FFDD8F;
     }
   </style>
 </html>
