--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <html>
+  
   <title>Radical Quotes</title>
   
   <body>
-    <svg width="400" height="110">
-      <rect width="300" height="100" style="fill:rgb(189,135,235)" />
-    </svg>
+    
+    <div id="porp">
+      <svg width="400" height="110">
+        <rect width=100% height="300" style="fill:rgb(189,135,235)" />
+      </svg>
+    </div>
+    
     <img src="Bodacious.png">
     <h1>Radical Quotes For Radical Dudes</h1>
   </body>
