--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <body>
     
     <div id="porp">
-      <svg width="400" height="110">
+      <svg width=100% height="300">
         <rect width=100% height="300" style="fill:rgb(189,135,235)" />
       </svg>
     </div>
