--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <body>
     
     <div id="porp">
-      <svg width=100% height="300">
-        <rect width=100% height="300" style="fill:rgb(189,135,235)" />
+      <svg width=100% height=10%>
+        <rect width=100% height=10% style="fill:rgb(189,135,235)" />
       </svg>
     </div>
     
