--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     
     .boxey {
       border: 1px solid white;
+      position: absolute;
+      top: 0%;
+      left: 50%;
     }
   </style>
 </html>
